# pool2-reference

./: .coveragerc  .diffcover.toml  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  Install.ps1  README.md  build-init-files.py  conftest.py  install.sh  mypy.ini  poetry-check.py  pyproject.toml  pytest.ini  ruff.toml
.github/actions/: install.yml
.github/actions/install/: action.yml
.github/workflows/: check-commit-signing.yml  pre-commit.yml  test.yml
chia-pool/: chia_service_config.py  config_loading.py  reference.py  rpc.py
chia-pool/api/: __init__.py  node.py  node_rpc.py  server.py  service.py  store.py  wallet.py  wallet_rpc.py
chia-pool/api/farmer_protocols/: rest.py
chia-pool/api/farmer_protocols/v1/: farmer.py
chia-pool/api/farmer_protocols/v2/: farmer.py
chia-pool/api/v1/: farmer.py
chia-pool/api/v2/: config.py  farmer.py  node.py  server.py  service.py  store.py  wallet.py
chia-pool/farmer_rpc/: api.py  v2.py
chia-pool/node/: config.py  rpc_wrapper.py
chia-pool/server/: authentication_scheme.py  config.py  farmer_rpc.py  logging.py  pooling_tasks.py
chia-pool/service/: config.py  service.py
chia-pool/store/: config.py  sqlite.py
chia-pool/tests/: config_creation.py  conftest.py  pytest.ini  test_hello_world.py
chia-pool/tests/node/: conftest.py  test_node.py
chia-pool/tests/rpc/: conftest.py  test_v2.py  v2.py
chia-pool/tests/server/: conftest.py  test_server.py
chia-pool/tests/service/: conftest.py  test_service.py
chia-pool/tests/store/: conftest.py  test_sqlite.py
chia-pool/tests/wallet/: conftest.py  test_rpc_wrapper.py
chia-pool/wallet/: config.py  rpc_wrapper.py
chia_pool/: reference.py
chia_pool/_tests/: conftest.py
chia_pool/_tests/node/: conftest.py  test_node.py
chia_pool/_tests/rpc/: test_v2.py
chia_pool/_tests/server/: conftest.py  test_server.py
chia_pool/_tests/service/: conftest.py  test_service.py
chia_pool/_tests/store/: conftest.py  test_sqlite.py
chia_pool/_tests/wallet/: conftest.py  test_rpc_wrapper.py
chia_pool/api/: rpc.py  server.py  service.py  wallet_rpc.py
chia_pool/farmer_rpc/: v2.py
chia_pool/node/: rpc_wrapper.py
chia_pool/server/: farmer_rpc.py  logging.py  pooling_tasks.py
chia_pool/service/: service.py
chia_pool/store/: config.py  sqlite.py
chia_pool/wallet/: config.py  rpc_wrapper.py
