[project]
name = "chia-pool"
dynamic = [ "dependencies", ]
description = "Chia reference pooling implementation"
requires-python = ">=3.10, <4"
authors = [
    {name="Matt Hauff", email="mhauff@chia.net"}
]
license = "Apache-2.0"
readme = {file = "README.md", content-type = "text/markdown"}
keywords= ["chia", "blockchain", "node", "pooling"]
homepage = "https://chia.net/"
version = "0.0.1-dev23"

[tool.poetry]
# see [tool.poetry-dynamic-versioning]
packages = [{ include = "chia-pool"}]

[[tool.poetry.source]]
name = "chia"
url = "https://pypi.chia.net/simple/"
priority = "supplemental"

[project.urls]
source = "https://github.com/Chia-Network/chia-pool/"

[tool.poetry.dependencies]
chia-blockchain = { git = "https://github.com/Chia-Network/chia-blockchain.git", rev = "a394f1b4f6961531215bb451b7ecb9caab927df6" }
aiohttp = { version = ">=3.13.3,<4.0.0" }
aiosqlite = { version = ">=0.22.1,<0.23.0" }
chia-rs = { version = "0.41.1" }
pyjwt = { version = ">=2.10.1,<3.0.0" }
marshmallow = { version = ">=4.2.1,<5.0.0" }
click = { version = ">=8.3.1,<9.0.0"}
mypy = { version = ">=1.11.1", optional = true }
pre-commit = { version = ">=3.7.1", optional = true }
pytest = { version = ">=8.3.3", optional = true }
pytest-xdist = { version = ">=3.8.0,<4.0.0", optional = true }
ruff = { version = ">=0.8.1", optional = true }

[project.optional-dependencies]
dev = ["mypy", "pre-commit", "pytest", "ruff", "pytest-xdist"]

[tool.poetry-dynamic-versioning]
enable = false
vcs = "git"
pattern = "default-unprefixed"
format-jinja = """
    {%- if distance == 0 -%}
        {%- if stage is none -%}
            {{ base }}
        {%- else -%}
            {{ base }}-{{stage}}{{revision}}
        {%- endif -%}
    {%- else -%}
        {%- if stage is none -%}
            {{ base }}-dev{{ distance }}
        {%- else -%}
            {{ base }}-{{stage}}{{revision}}.dev{{ distance }}
        {%- endif -%}
    {%- endif -%}
"""
#format-jinja = """
#    {%- if distance == 0 -%}
#        {{ serialize_pep440(base, stage, revision) }}
#    {%- else -%}
#        {{ serialize_pep440(base, stage, revision, dev=distance) }}
#    {%- endif -%}
#"""
style = "semver"
bump = true

[build-system]
requires = ["poetry-core>=1.0.0", "poetry-dynamic-versioning"]
build-backend = "poetry_dynamic_versioning.backend"
